fix: 🐛 z-index too small

--- a/skinStyles/ooui/oojs-ui-windows.less
+++ b/skinStyles/ooui/oojs-ui-windows.less
@@ -121,6 +121,7 @@
 }
 
 .oo-ui-windowManager-modal > .oo-ui-dialog {
+	z-index: 11;
 	background-color: var( --background-color-overlay--lighter );
 }
 
